--- a/css/main.css
+++ b/css/main.css
@@ -88,17 +88,24 @@ textarea {
 /* ================== */
 /* ----- GLOBAL >>>>> */
 
+p {
+  margin: 0;
+}
+
 .content-wrapper {
   width: 90%;
+  padding: 50px 0;
   outline: 2px dotted violet;
   /* For debugging purposes */
 }
 
 /* -------------------- Base Header - Footer Styles -------------------- */
 
+/* HEADER */
 header {
   display: flex;
   justify-content: center;
+
 }
 
 header .content-wrapper {
@@ -106,34 +113,41 @@ header .content-wrapper {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding: 15px 0;
 }
 
 header .logo {
-  width: 50%;
+  width: 60%;
   text-align: center;
   margin: 0;
-  padding: 15px 0 10px;
 }
 
-/* header .header-divider {
+header .header-divider {
   width: 100%;
   height: 2px;
   background-color: #ccc;
-} */
+  margin-top: 10px;
+}
 
-/* header nav {
+header nav {
+  width: 60%;
   padding: 20px 0 15px;
-} */
+}
 
 header ul {
   margin: 0;
   padding: 0;
   list-style: none;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 header ul li {}
+
+header nav a {
+  padding: inherit;
+  text-decoration: none;
+}
 
 /* FOOTER */
 footer {
@@ -143,11 +157,17 @@ footer {
   text-align: center;
 }
 
+footer .content-wrapper {
+  width: 55%;
+}
+
+footer h4 {
+  margin: 20px 0;
+}
+
 footer .social-icons {
   display: flex;
   justify-content: space-around;
-
-
 }
 
 footer .social-icons p {
@@ -155,6 +175,12 @@ footer .social-icons p {
   justify-content: center;
   align-items: center;
 }
+
+footer .copyright {
+  margin: 20px 0;
+}
+
+
 
 /* <<<<< GLOBAL ----- */
 /* ================== */
@@ -181,21 +207,41 @@ aside {
   justify-content: center;
 }
 
+.features h2 {
+  margin: 0 0 60px;
+}
+
 .features .feature-items {
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-flow: column wrap;
+  justify-content: center;
+  align-items: flex-start;
+  flex-flow: row wrap;
 }
 
 .features article {
-  width: 60%;
+  width: 63%;
+}
+
+.features .fontawesome-icon {
+  margin: 30px 0 40px;
+}
+
+.features p {
+  margin: 0 0 30px;
 }
 
 /* REVIEWS */
 .reviews {
   display: flex;
   justify-content: center;
+}
+
+.reviews h2 {
+  margin: 0 0 40px;
+}
+
+.reviews h3 {
+  margin: 20px 0;
 }
 
 /* ==========================================================================
@@ -231,6 +277,15 @@ aside {
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
+  margin: 50px 0 0;
+}
+
+.faq h2 {
+  margin: 0 0 40px;
+}
+
+.faq-item {
+  margin: 0 0 50px;
 }
 
 /* ==========================================================================
