Adding desktop breakpoints

--- a/css/main.css
+++ b/css/main.css
@@ -527,19 +527,30 @@ aside {
 
   /* Desktop Style Here */
 
+  /* GLOBAL */
+
+  /* HEADER */
+  header .content-wrapper {
+    padding: 15px 0;
+  }
+
   /* ==========================================================================
    Home Page
    ========================================================================== */
 
-  /* ==========================================================================
-   About Page
-   ========================================================================== */
+  .reviews h2 {
+    margin: 0 0 50px;
+  }
 
+  .features .feature-items {
+    justify-content: center;
+    column-gap: 10%;
+  }
 
+  .features article {
+    width: 20%;
+  }
 
-  /* ==========================================================================
-   FAQs Page
-   ========================================================================== */
 
   /* === Desktop Style End */
 }
