--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,11 @@ textarea {
 /* ================== */
 /* ----- GLOBAL >>>>> */
 
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+}
+
 h1,
 h2,
 h3,
@@ -95,6 +100,69 @@ h4,
 p,
 figure {
   margin: 0;
+}
+
+h1 {
+  font-family: Poppins, Helvetica, Arial, sans-serif;
+  font-size: 2.25rem;
+  line-height: 2.6875rem;
+  font-weight: 500;
+}
+
+h2 {
+  font-family: Poppins, sans-serif;
+  font-size: 1.87rem;
+  font-weight: 500;
+}
+
+.reviews h2,
+.faq h2 {
+  line-height: 1.87rem;
+}
+
+h3 {
+  font-family: Poppins, sans-serif;
+  font-size: 1.125rem;
+  font-weight: 500;
+}
+
+h4 {
+  font-family: Poppins, sans-serif;
+  font-size: 1.125rem;
+  font-weight: 500;
+}
+
+.faq-content .h4 {
+  font-size: 1.5rem;
+}
+
+p {
+  font-size: 0.875rem;
+  line-height: 1.125rem;
+}
+
+nav a {
+  font-size: 1.125rem;
+  font-weight: 900;
+  color: #e2e3ed;
+  text-decoration: none;
+}
+
+input {
+  font-size: 1.125rem;
+  font-weight: 500;
+}
+
+.fontawesome-icon {
+  font-size: 3.75rem;
+}
+
+.social-icons a {
+  font-size: 1.3125rem;
+}
+
+address {
+  font-style: normal;
 }
 
 .content-wrapper {
@@ -130,7 +198,7 @@ header .logo {
 header .header-divider {
   width: 100%;
   height: 2px;
-  background-color: #ccc;
+  background-color: #3a3a3a;
   margin-top: 10px;
 }
 
@@ -149,7 +217,6 @@ header ul {
 
 header nav a {
   padding: inherit;
-  text-decoration: none;
 }
 
 /* FOOTER */
@@ -398,6 +465,42 @@ aside {
 
   /* GLOBAL */
 
+  h1 {
+    font-size: 3rem;
+    line-height: 3rem;
+
+  }
+
+  h2 {
+    font-size: 2.25rem;
+    line-height: 3rem;
+  }
+
+  .reviews h2,
+  .faq h2 {
+    line-height: 3rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+    line-height: 1.875rem;
+  }
+
+  .contact-us h4,
+  footer h4 {
+    font-size: 1.5rem;
+  }
+
+  footer p {
+    line-height: 1.125rem;
+  }
+
+  .faq h4,
+  .faq p {
+    font-size: 0.875rem;
+    line-height: 0.9843rem;
+  }
+
   .content-wrapper {
     padding: 100px 0;
   }
@@ -528,6 +631,35 @@ aside {
   /* Desktop Style Here */
 
   /* GLOBAL */
+
+  h1 {
+    font-size: 3.75rem;
+  }
+
+  h2 {
+    font-size: 2.25rem;
+  }
+
+  h3,
+  h4 {
+    font-size: 1.875rem;
+  }
+
+  p {
+    font-size: 1.125rem;
+    line-height: 1.5rem;
+  }
+
+  .mission h2,
+  .faq h2 {
+    font-size: 3rem;
+  }
+
+  .faq h4,
+  .faq p {
+    font-size: 1.125rem;
+    line-height: 1.125rem;
+  }
 
   /* HEADER */
   header .content-wrapper {
