--- a/css/main.css
+++ b/css/main.css
@@ -414,6 +414,21 @@ input[type=button] {
   justify-content: center;
 }
 
+.map-container {
+  position: relative;
+  padding-bottom: 125%;
+  height: 0;
+  overflow: hidden;
+}
+
+.map-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* CONTACT-US */
 .contact-us {
   display: flex;
@@ -627,7 +642,7 @@ input[type=button] {
   }
 
   /* ==========================================================================
-   Home Page
+   Home Page - Tablet
    ========================================================================== */
 
 
@@ -670,7 +685,7 @@ input[type=button] {
   }
 
   /* ==========================================================================
-   About Page
+   About Page - Tablet
    ========================================================================== */
 
   /* MISSION */
@@ -690,7 +705,7 @@ input[type=button] {
   }
 
   /* ==========================================================================
-   FAQs Page
+   FAQs Page - Tablet
    ========================================================================== */
 
   .faq .faq-content {
@@ -748,7 +763,7 @@ input[type=button] {
   }
 
   /* ==========================================================================
-   Home Page
+   Home Page - Desktop
    ========================================================================== */
 
   .reviews h2 {
